DFL and capstone video

--- a/capstone.html
+++ b/capstone.html
@@ -63,7 +63,11 @@
 
         <div class="separator"></div>
 
-        <p><img class="img-left img-top" src="project-pages/capstone-intro.jpg" alt="Quadcopter used to image the area">I led a team to design, prototype, and verify a turnkey aerial imaging system for the Georgia Tech Senior Capstone Design challenge in Spring 2016. The project sponsor, the Brown Water Group, is currently conducting sanitation studies in informal communities in Maputo, Mozambique, but was unable to calculate the population densities of the studied communities, an essential measure for their study. While the Brown Group is currently able to measure the population of the communities via a census, they are unable to use either ground-based or satellite-based methods to measure compound areas, the land area of individual homes.</p>
+        <div class="centered section">
+            <iframe width="560" height="315" style="margin: auto;" src="https://www.youtube-nocookie.com/embed/OeNuO3kTnmA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <p>I led a team to design, prototype, and verify a turnkey aerial imaging system for the Georgia Tech Senior Capstone Design challenge in Spring 2016. The project sponsor, the Brown Water Group, is currently conducting sanitation studies in informal communities in Maputo, Mozambique, but was unable to calculate the population densities of the studied communities, an essential measure for their study. While the Brown Group is currently able to measure the population of the communities via a census, they are unable to use either ground-based or satellite-based methods to measure compound areas, the land area of individual homes.</p>
 
         <p>In this project, my team developed a drone-based imaging system that can quickly and accurately create a composite aerial photo of the area being studied from which compound area may be measured. The delivered system includes a hardware flight system based on a 3DR IRIS+ and uses a GoPro Hero4 to capture a large number of images that may be stitched together to create a composite photo. Further, we developed a software suite that allows users to plan flights over a desired area, stitch large numbers of captured photos into one high-resolution composite photo, and accurately measure area from the composite photo.</p>
 
@@ -76,6 +80,41 @@
         <p>To learn more about the project, <a href="project-pages/capstone-report.pdf" download target="_blank">read our report</a>. All of our software is open source on <a aria-label="GitHub repository" rel="external" href="https://github.com/rupumped/AerialMapping" target="_blank">GitHub</a>.</p>
 
         <img class="img-full-width" src="project-pages/capstone-action.jpg" alt="A drone piloted by one of three men in a field">
+        <div class="gallery">
+            <a href="project-pages/capstone-gal00.JPG" target="_blank">
+                <img src="project-pages/capstone-gal00.JPG" alt="A flying quadcopter being observed by a group of people">
+            </a>
+            <a href="project-pages/capstone-gal01.JPG" target="_blank">
+                <img src="project-pages/capstone-gal01.JPG" alt="MAPSAN team picture">
+            </a>
+            <a href="project-pages/capstone-gal02.JPG" target="_blank">
+                <img src="project-pages/capstone-gal02.JPG" alt="Working on computer code">
+            </a>
+            <a href="project-pages/capstone-gal03.JPG" target="_blank">
+                <img src="project-pages/capstone-gal03.JPG" alt="Quadcopter in the sky">
+            </a>
+            <a href="project-pages/capstone-gal04.JPG" target="_blank">
+                <img src="project-pages/capstone-gal04.JPG" alt="People discussing near a quadcopter">
+            </a>
+            <a href="project-pages/capstone-gal05.JPG" target="_blank">
+                <img src="project-pages/capstone-gal05.JPG" alt="Quadcopter on the ground">
+            </a>
+            <a href="project-pages/capstone-gal06.JPG" target="_blank">
+                <img src="project-pages/capstone-gal06.JPG" alt="MAPSAN teammate smiling next to the quadcopter">
+            </a>
+            <a href="project-pages/capstone-gal07.JPG" target="_blank">
+                <img src="project-pages/capstone-gal07.JPG" alt="Multiple people working on computer code">
+            </a>
+            <a href="project-pages/capstone-gal08.JPG" target="_blank">
+                <img src="project-pages/capstone-gal08.JPG" alt="Quadcopter being piloted">
+            </a>
+            <a href="project-pages/capstone-gal09.JPG" target="_blank">
+                <img src="project-pages/capstone-gal09.JPG" alt="Computer running code">
+            </a>
+            <a href="project-pages/capstone-gal10.JPG" target="_blank">
+                <img src="project-pages/capstone-gal10.JPG" alt="CAD of the quadcopter">
+            </a>
+        </div>
     </main>
 
 	<footer>
