--- a/lowtemp.html
+++ b/lowtemp.html
@@ -39,7 +39,7 @@
     <main>
         <div class="cover section">
             <img src="project-pages/lowtemp-cover.jpg" alt="Scenes from low-temperature physics experiments">
-            <h1 class="lowtemp-title">Low Temperature Physics for Quantum Computing</h1>
+            <h1>Low Temperature Physics for Quantum Computing</h1>
         </div>
 
         <section id="skills-demonstrated">
