--- a/selected-work.html
+++ b/selected-work.html
@@ -41,6 +41,14 @@
         <p class="centered"><i>click on an image to read more about the project</i></p>
 
         <div id="selected-work-container">
+            <a class="project" aria-label="Autonomous Excavation" href="dfl.html">
+                <img src="selected-work/dfl.jpg" alt="Illustration of a machine learning algorithm for autonomous excavation">
+                <div class="proj-overlay">
+                    <div class="hashtags">#robotics #artificial-intelligence</div>
+                    <div class="proj-title">Autonomous Excavation</div>
+                </div>
+            </a>
+
             <a class="project" aria-label="TeachBot" href="teachbot.html">
                 <img src="selected-work/teachbot.jpg" alt="Man interacting with a collaborative manufacturing robot">
                 <div class="proj-overlay">
