Rename .JPG -> .jpg

--- a/capstone.html
+++ b/capstone.html
@@ -81,38 +81,38 @@
 
         <img class="img-full-width" src="project-pages/capstone-action.jpg" alt="A drone piloted by one of three men in a field">
         <div class="gallery">
-            <a href="project-pages/capstone-gal00.JPG" target="_blank">
-                <img src="project-pages/capstone-gal00.JPG" alt="A flying quadcopter being observed by a group of people">
+            <a href="project-pages/capstone-gal00.jpg" target="_blank">
+                <img src="project-pages/capstone-gal00.jpg" alt="A flying quadcopter being observed by a group of people">
             </a>
-            <a href="project-pages/capstone-gal01.JPG" target="_blank">
-                <img src="project-pages/capstone-gal01.JPG" alt="MAPSAN team picture">
+            <a href="project-pages/capstone-gal01.jpg" target="_blank">
+                <img src="project-pages/capstone-gal01.jpg" alt="MAPSAN team picture">
             </a>
-            <a href="project-pages/capstone-gal02.JPG" target="_blank">
-                <img src="project-pages/capstone-gal02.JPG" alt="Working on computer code">
+            <a href="project-pages/capstone-gal02.jpg" target="_blank">
+                <img src="project-pages/capstone-gal02.jpg" alt="Working on computer code">
             </a>
-            <a href="project-pages/capstone-gal03.JPG" target="_blank">
-                <img src="project-pages/capstone-gal03.JPG" alt="Quadcopter in the sky">
+            <a href="project-pages/capstone-gal03.jpg" target="_blank">
+                <img src="project-pages/capstone-gal03.jpg" alt="Quadcopter in the sky">
             </a>
-            <a href="project-pages/capstone-gal04.JPG" target="_blank">
-                <img src="project-pages/capstone-gal04.JPG" alt="People discussing near a quadcopter">
+            <a href="project-pages/capstone-gal04.jpg" target="_blank">
+                <img src="project-pages/capstone-gal04.jpg" alt="People discussing near a quadcopter">
             </a>
-            <a href="project-pages/capstone-gal05.JPG" target="_blank">
-                <img src="project-pages/capstone-gal05.JPG" alt="Quadcopter on the ground">
+            <a href="project-pages/capstone-gal05.jpg" target="_blank">
+                <img src="project-pages/capstone-gal05.jpg" alt="Quadcopter on the ground">
             </a>
-            <a href="project-pages/capstone-gal06.JPG" target="_blank">
-                <img src="project-pages/capstone-gal06.JPG" alt="MAPSAN teammate smiling next to the quadcopter">
+            <a href="project-pages/capstone-gal06.jpg" target="_blank">
+                <img src="project-pages/capstone-gal06.jpg" alt="MAPSAN teammate smiling next to the quadcopter">
             </a>
-            <a href="project-pages/capstone-gal07.JPG" target="_blank">
-                <img src="project-pages/capstone-gal07.JPG" alt="Multiple people working on computer code">
+            <a href="project-pages/capstone-gal07.jpg" target="_blank">
+                <img src="project-pages/capstone-gal07.jpg" alt="Multiple people working on computer code">
             </a>
-            <a href="project-pages/capstone-gal08.JPG" target="_blank">
-                <img src="project-pages/capstone-gal08.JPG" alt="Quadcopter being piloted">
+            <a href="project-pages/capstone-gal08.jpg" target="_blank">
+                <img src="project-pages/capstone-gal08.jpg" alt="Quadcopter being piloted">
             </a>
-            <a href="project-pages/capstone-gal09.JPG" target="_blank">
-                <img src="project-pages/capstone-gal09.JPG" alt="Computer running code">
+            <a href="project-pages/capstone-gal09.jpg" target="_blank">
+                <img src="project-pages/capstone-gal09.jpg" alt="Computer running code">
             </a>
-            <a href="project-pages/capstone-gal10.JPG" target="_blank">
-                <img src="project-pages/capstone-gal10.JPG" alt="CAD of the quadcopter">
+            <a href="project-pages/capstone-gal10.jpg" target="_blank">
+                <img src="project-pages/capstone-gal10.jpg" alt="CAD of the quadcopter">
             </a>
         </div>
     </main>
