--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="selected-work.html">SELECTED WORK</a></li>
             <li><a href="blog.html">BLOG</a></li>
             <li><a href="service.html">SERVICE</a></li>
+            <li id="business-card"><a aria-label="This is a hidden link to my digital business card" href="business-card.html">BUSINESS CARD</a></li>
         </ul>
     </header>
 
