Reorg business card

--- a/business-card.html
+++ b/business-card.html
@@ -32,7 +32,7 @@
     
 	<header>
         <img alt="Renewvia Logo" src="business-card/rsa-logo.png">
-        <div id="name">Nicholas Selby, PhD</div>
+        <div id="name">Nicholas Selby</div>
         <div id="job">Director of Engineering at Renewvia</div>
     </header>
 
