Business card _blank target anchors

--- a/business-card.html
+++ b/business-card.html
@@ -37,22 +37,22 @@
     </header>
 
     <main>
-        <a rel="author" class="contact" href="mailto:nicholas.selby@renewvia.com">
+        <a rel="author" class="contact" href="mailto:nicholas.selby@renewvia.com" target="_blank">
             <img alt="Email icon" src="business-card/icon-email.jpg">
             <p>nicholas.selby@renewvia.com</p>
         </a>
 
-        <a class="contact" href="https://rupumped.github.io/">
+        <a class="contact" href="https://rupumped.github.io/" target="_blank">
             <img alt="Website icon" src="business-card/icon-website.jpg">
             <p>rupumped.github.io</p>
         </a>
 
-        <a rel="external" class="contact" href="https://goo.gl/maps/MaFEdxeVpEvhab946">
+        <a rel="external" class="contact" href="https://goo.gl/maps/MaFEdxeVpEvhab946" target="_blank">
             <img alt="Location icon" src="business-card/icon-loc.jpg">
             <p>PO Box 14805, Nairobi, Kenya</p>
         </a>
 
-        <a class="contact" href="business-card/qr.png">
+        <a class="contact" href="business-card/qr.png" target="_blank">
             <img alt="QR code icon" src="business-card/icon-qr.jpg">
             <p>Get sharable QR code</p>
         </a>
