Click on/tap on selected work page

--- a/selected-work.html
+++ b/selected-work.html
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-        <p class="centered"><i>click on an image to read more about the project</i></p>
+        <p class="centered"><i><span id="click-on">click on</span><span id="tap">tap</span> an image to read more about the project</i></p>
 
         <div id="selected-work-container">
             <a class="project" aria-label="Autonomous Excavation" href="dfl.html">
