Added professional service

--- a/index.html
+++ b/index.html
@@ -206,15 +206,32 @@
 
         <section id="service">
             <h2>Professional Service</h2>
+            Public Speaking:
+            <ul>
+                <li>Invited lecturer for the MIT Office of Engineering Outreach Programs summer workshop, on "An Introduction to Machine Learning with PyTorch," 2021</li>
+                <li>Invited lecturer for "Summer Springboard," a high school summer program, on "Robotics 101," 2021</li>
+                <li>Host of "Science Day" for 600+ low-income K-5th graders at Conley Hills Elementary School, 2015</li>
+                <li>Keynote speaker at FIRST Robotics international competition, 2014</li>
+                <li>Keynote speaker at No Excuses University national convention, 2014</li>
+                <li>Host of "Tech Talks," a science communication competition, at the Atlanta Science Festival, 2014</li>
+                <li>Opening speaker for the Georgia Tech Freshman Convocation Ceremony, 2013</li>
+                <li>Opening speaker for the Georgia Tech Martin Luther King Jr. Day of Service, 2013</li>
+            </ul>
+            Academic Service:
+            <ul>
+                <li>MIT Graduate Student Council, 2020⁠–2021</li>
+                <li>MIT Mechanical Engineering Diversity, Equity, and Inclusion Working Group, 2020⁠–2021</li>
+                <li>University System of Georgia China Outreach Program, 2014</li>
+            </ul>
             Journal Referee [<a rel="external" href="https://publons.com/researcher/3507536/nicholas-stearns-selby/peer-review/" target="_blank">Publons</a>]:
             <ul>
+                <li><a rel="external" href="https://dl.acm.org/journal/tosn" target="_blank">ACM Transactions on Sensor Networks</a></li>
+                <li><a rel="external" href="https://www.iros2021.org/" target="_blank">IEEE International Conference on Intelligent Robots and Systems</a></li>
+                <li><a rel="external" href="https://ieee-iotj.org/" target="_blank">IEEE Internet of Things Journal</a></li>
                 <li><a rel="external" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6979" target="_blank">IEEE Transactions on Intelligent Transportation Systems</a></li>
+                <li><a rel="external" href="https://www.computer.org/web/tmc" target="_blank">IEEE Transactions on Mobile Computing</a></li>
                 <li><a rel="external" href="https://car.osu.edu/AAC2022" target="_blank">IFAC International Symposium on Advances in Automotive Control</a></li>
                 <li><a rel="external" href="https://www.mtns2022.uni-bayreuth.de/en/index.html" target="_blank">International Symposium on Mathematical Theory of Networks and Systems</a></li>
-                <li><a rel="external" href="https://www.iros2021.org/" target="_blank">IEEE International Conference on Intelligent Robots and Systems</a></li>
-                <li><a rel="external" href="https://dl.acm.org/journal/tosn" target="_blank">ACM Transactions on Sensor Networks</a></li>
-                <li><a rel="external" href="https://www.computer.org/web/tmc" target="_blank">IEEE Transactions on Mobile Computing</a></li>
-                <li><a rel="external" href="https://ieee-iotj.org/" target="_blank">IEEE Internet of Things Journal</a></li>
             </ul>
         </section>
     </main>
