Font overhaul and kidney blog post

--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <a class="item" aria-label="15 Steps to Donate a Kidney" rel="external" href="https://docs.google.com/document/d/1OyPrLfXdgQsPYqOdM8csT0iSkmOXL0qMn7Q2GYBzDb0/edit?usp=sharing" target="_blank" download>
+        <a class="item" aria-label="15 Steps to Donate a Kidney" href="kidney.html">
             <p class="date">September 27, 2021</p>
             <div class="w-img">
                 <img src="blog/kidney.jpg" alt="Me about to donate a kidney">
