--- a/ndte.html
+++ b/ndte.html
@@ -16,7 +16,7 @@
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -61,7 +61,7 @@
 
         <div class="separator"></div>
 
-        <p>Working under the direction of Professors Laurence Jacobs and David Torello at Georgia Tech, I designed and implemented a novel air-coupled transducer calibration technique.</p>
+        <p>Working under the direction of Professors <a href="https://www.me.gatech.edu/faculty/jacobs" rel="external" target="_blank">Laurence Jacobs</a> and <a href="https://www.me.gatech.edu/faculty/torello" rel="external" target="_blank">David Torello</a> at Georgia Tech, I designed and implemented a novel air-coupled transducer calibration technique.</p>
 
         <section>
             <h2>Problem</h2>
