--- a/rfind.html
+++ b/rfind.html
@@ -16,7 +16,7 @@
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -59,7 +59,7 @@
 
         <div class="separator"></div>
 
-        <p class="disclaimer"><i>The following is from the <a rel="external" href="https://www.media.mit.edu/projects/rfid-localization/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</i></p>
+        <p class="disclaimer">The following is from the <a rel="external" href="https://www.media.mit.edu/projects/rfid-localization/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</p>
 
         <p>Presenting RFind, a new technology that allows us to locate almost any object with extreme accuracy by transforming low-cost, battery-free wireless stickers into powerful radars. At a high level, our technology operates by measuring the time it takes the signal to travel from the wireless sticker to an access point. By taking into account the speed of propagation of light, we can then map the time to an exact location (with sub-centimeter precision) in 3D space.</p>
 
