--- a/rfly.html
+++ b/rfly.html
@@ -16,7 +16,7 @@
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -61,7 +61,7 @@
 
         <div class="separator"></div>
 
-        <p class="disclaimer"><i>The following is from the <a rel="external" href="https://www.media.mit.edu/projects/wireless-sensing-for-drones-agile-robots-robotics/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</i></p>
+        <p class="disclaimer">The following is from the <a rel="external" href="https://www.media.mit.edu/projects/wireless-sensing-for-drones-agile-robots-robotics/overview/" target="_blank">project website</a>. CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day.</p>
 
         <p>Can drones find missing items? Every year, companies lose billions of dollars due to misplaced items and faulty inventory records in their warehouses. Consider that the smallest Walmart warehouse is larger than 17 football fields, making it impossible to keep track of all items in the warehouse.</p>
 
