Start biblical inerrancy

--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
 
         <div class="separator"></div>
 
-        <a class="item" aria-label="Biblical Inerrancy" rel="external" href="https://docs.google.com/document/d/1HZBCKSAibXGxuvpQmn940V4OD9J1AKOMEVtqE3UnVOQ/edit?usp=sharing" target="_blank">
+        <a class="item" aria-label="Biblical Inerrancy" href="biblical-inerrancy.html">
             <p class="date">May 28, 2020</p>
             <h2>Biblical Inerrancy</h2>
             <p class="teaser">I grew up believing that everything written in the Bible was literally true. I aim to guide a deconstruction of biblical inerrancy and provide an alternative view in which I have found freedom.</p>
