--- a/kidney.html
+++ b/kidney.html
@@ -8,7 +8,7 @@
 
 	<!-- SEO Description-->
 	<meta name="description" content="The best decision I ever made was to donate my left kidney to a stranger. I kept a detailed journal of the entire experience, from the idea's inception to my surgery and recovery.">
-    <link rel="canonical" href="https://rupumped.github.io/lowtemp.html">
+    <link rel="canonical" href="https://rupumped.github.io/kidney.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
