--- a/blog.html
+++ b/blog.html
@@ -105,7 +105,7 @@
 
         <div class="separator"></div>
 
-        <a class="item" aria-label="Gospel Authorship" rel="external" href="https://docs.google.com/document/d/1rlVWjE9amp7qZztOaLyo7BWup57p13x9Mb2qTrZ3p50/edit?usp=sharing" target="_blank">
+        <a class="item" aria-label="Gospel Authorship" href="gospel-authorship.html">
             <p class="date">April 15, 2018</p>
             <div class="w-img">
                 <img src="blog/gospels-relationship.jpg" title="By Relationship_between_synoptic_gospels.png: Alecmconroyderivative work: Popadius - This file was derived from  Relationship between synoptic gospels.png:, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=27903558" alt="Relationships between the synoptic gospels">
