--- a/kidney.html
+++ b/kidney.html
@@ -39,7 +39,7 @@
     <main>
         <h1>15 Steps to Donate a Kidney</h1>
         <p class="date">Originally posted on September 27, 2021. Updated May 20, 2022.</p>
-        <figure>
+        <figure class="cover">
             <img src="blog-posts/kidney-cover.jpg" alt="Illustration of two kidneys">
             <figcaption>Photo CC BY-4.0. Credit: <a href="http://clamorworld.com/sushma-swarajs-kidney-transplant-useful-tips-for-a-healthy-recovery/" rel="external" target="_blank">ClamorWorld</a>.</figcaption>
         </figure>
