Fix bug in canonical link

--- a/gospel-authorship.html
+++ b/gospel-authorship.html
@@ -8,7 +8,7 @@
 
 	<!-- SEO Description-->
 	<meta name="description" content="None of the Gospels were likely written by someone who had met Jesus. This is my quest for a sola-scriptura understanding of what Jesus was like.">
-    <link rel="canonical" href="https://rupumped.github.io/biblical-inerrancy.html">
+    <link rel="canonical" href="https://rupumped.github.io/gospel-authorship.html">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
