Public speaking blog post

--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
 
         <div class="separator"></div>
 
-        <a class="item" aria-label="Common Public Speaking Problems and Exercises to Fix Them" rel="external" href="https://docs.google.com/document/d/1NQmFlcVhH7I2uUY3qdEdh3J_eNhl7Ckr3OJpWRFXJ7s/edit?usp=sharing" target="_blank">
+        <a class="item" aria-label="Common Public Speaking Problems and Exercises to Fix Them" href="public-speaking-problems.html">
             <p class="date">July 25, 2020</p>
             <div class="w-img">
                 <img src="blog/public-speaking.jpg" alt="Me speaking publicly">
