png to jpg and wikipedia fixes

--- a/gospel-authorship.html
+++ b/gospel-authorship.html
@@ -64,14 +64,14 @@
 			<p>What was Jesus like? Before we consult Christian dogma, we can only assume that the Gospels were accounts of Jesus written by people who knew Him or had heard of Him from others. Of the Gospels, only the Gospel of John claims to have been written by someone who knew Jesus.<sup class="in-text-citation">[<a id="it1" href="#wc1">1</a>]</sup> The rest carry no internal claims to authorship.</p>
 			<p>According to Maier,<sup class="in-text-citation">[<a id="it2" href="#wc2">2</a>]</sup> Jesus died either in 30 or 33 CE. Luke 3:23 states that Jesus was about 30 years old when He began teaching. John mentions three or four Passovers,<sup class="in-text-citation">[<a id="it3" href="#wc3">3</a>]</sup> implying Jesus taught for 3½ years.<sup class="in-text-citation">[<a id="it4" href="#wc4">4</a>]</sup> Thus, Jesus was probably born between 4 BCE and 1 CE. Alternatively, according to Luke 2:2, Jesus was born while Quirinius was governor of Syria in 6–7 CE, which would put Jesus's death circa 39–40 CE.<sup class="in-text-citation">[<a id="it5" href="#wc5">5</a>]</sup> At some point after Jesus' death between 30 and 40 CE, some number of sources were collected into at least four Gospels.</p>
 			<p>As a general rule, the earlier something was written and the closer the source was to Jesus, the more reliably it should be able to portray events in Jesus' life.</p>
-            <img class="img-center" src="blog-posts/gospels-timeline1.png" alt="Timeline showing Jesus' birth and death and the composition of the Gospels">
+            <img class="img-center" src="blog-posts/gospels-timeline1.jpg" alt="Timeline showing Jesus' birth and death and the composition of the Gospels">
         </section>
 
         <section id="Sources">
 			<h2>Determining Sources and Order</h2>
             <figure>
                 <img class="white-bg img-center" style="width: 12cm;" src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Relationship_between_synoptic_gospels-en.svg" alt="Relationship between synoptic gospels">
-                <figcaption>The relationships between the three synoptic gospels. Original: Alecmconroy. Derivative work: Popadius, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons</figcaption>
+                <figcaption>The relationships between the three synoptic gospels. Original: Alecmconroy. Derivative work: Popadius, <a href="https://creativecommons.org/licenses/by-sa/3.0" rel="license" target="_blank">CC BY-SA 3.0</a>, via Wikimedia Commons</figcaption>
             </figure>
 			<p>The Gospels of Matthew, Mark, and Luke are considered the Synoptic Gospels because of the large amount of overlap between them. John "contains 93 percent original material in comparison to the Synoptics."<sup class="in-text-citation">[<a id="it6" href="#wc6">6</a>]</sup></p>
 			<h3>Mark Came First</h3>
@@ -102,7 +102,7 @@
 			<p>Likely, the authors of the Gospels of Matthew and Luke would have recorded the oral sources as the authors remembered them with little to no verbatim agreement, whereas they would have copied written sources directly from Q with high verbatim agreement.</p>
 			<p>Q<sup class="in-text-citation">[<a id="it18" href="#wc18">18</a>]</sup> mostly contains the sayings of Jesus, or the <i>logia</i>. MacDonald<sup class="in-text-citation">[<a id="it19" href="#wc19">19</a>]</sup> hypothesizes that Papias' Gospel of Matthew was actually Q. As discussed above, the only surviving piece of Papias' description of that Gospel is, "Matthew set in order the logia in a Hebrew dialect, and each interpreted them, as he was able." Q is mostly made up of logia. Furthermore, as Burkett points out, the fact that Matthew and Luke use identical wording in many places makes it likely that those portions of Q would already be in Greek. Otherwise, the authors of the Gospels of Matthew and Luke would have interpreted Q at least slightly differently. Perhaps the author of a written part of Q whom Papias called Matthew had compiled and translated Jesus' logia into Greek which were then copied by the authors of the Gospels of Matthew and Luke, mentioned by Papias via Eusebius, and then lost as a standalone document because it was already contained in two widely circulated Gospels. This explanation is known as the Q+/Papias hypothesis.<sup class="in-text-citation">[<a id="it20" href="#wc20">20</a>]</sup></p>
 			<p>Insofar as it exists, Q is a major source of our knowledge about Jesus. Some scholars even argue that Q predates Mark.<sup class="in-text-citation">[<a id="it21" href="#wc21">21</a>]</sup></p>
-            <img class="img-full-width" src="blog-posts/gospels-timeline2.png" alt="An updated timeline including Mark, Matthew, Luke, John, and Q">
+            <img class="img-full-width" src="blog-posts/gospels-timeline2.jpg" alt="An updated timeline including Mark, Matthew, Luke, John, and Q">
 			<p>In summary, the Gospel of Mark was probably written first because almost all of it is used in the Gospels of Matthew and Luke, with the remaining pieces seeming not important enough to be added if the Gospel of Mark had instead been written later. Matthew and Luke both cited Mark, but also each contained information which was unique to it (as in, information exclusively in the Gospel of Matthew or exclusively in the Gospel of Luke), implying that they were written at about the same time. The Gospels of Matthew and Luke also contained a significant quantity of shared material not found in Mark, implying that at least one other source, Q, was used. Finally, the uniqueness of the Gospel of John relative to the Synoptics indicates its purpose as a supplement to or a more poetic version of them, and therefore written after them.</p>
 		</section>
             
@@ -121,7 +121,7 @@
 			<p>Assuming the Gospel of John followed the Gospel of Mark, it couldn't have been written prior to 70 CE. The oldest fragment of the Gospel of John, also the oldest fragment of any gospel, is believed to be P52,<sup class="in-text-citation">[<a id="it34" href="#wc34">34</a>]</sup> dating somewhere between 125 CE<sup class="in-text-citation">[<a id="it35" href="#wc35">35</a>]</sup> and the beginning of the third century.<sup class="in-text-citation">[<a id="it36" href="#wc36">36</a>]</sup></p>
 			<p>Martyn argues that John 9:22's statement that Jewish leaders would expel Christians from the synagogue references the Council of Jamnia circa 80 CE, thus moving the <i>terminus</i> later by one decade, but his theory has been largely discredited.<sup class="in-text-citation">[<a id="it37" href="#wc37">37</a>]</sup> Barrett<sup class="in-text-citation">[<a id="it38" href="#wc38">38</a>]</sup> argues the range down to 90–140 CE with a best guess of 100 CE. He uses Marcan priority to date the Gospel of John "certainly not earlier than A.D. 80; 90 would perhaps be a safer estimate." Time definitely needed to have passed for the author of the Gospel of John to have read the Gospel of Mark, and probably also the other two gospels, but twenty years seems like an entirely arbitrary choice. He continues, "It is of course very improbable that the papyrus [P52] should be the autograph copy of the gospel, and we may safely push the <i>terminus</i> back as far as AD 140, especially since the papyrus may have been written earlier...than A.D. 150." In my opinion, Barrett's argument is highly speculative.</p>
 			<p>In conclusion, this is the most precise timeline I have been able to assemble:</p>
-            <img class="img-full-width" src="blog-posts/gospels-timeline3.png" alt="Updated timeline including date ranges for the composition of the Gospels">
+            <img class="img-full-width" src="blog-posts/gospels-timeline3.jpg" alt="Updated timeline including date ranges for the composition of the Gospels">
         </section>
 
         <section id="None">
@@ -180,15 +180,15 @@
 				<li id="wc9"><a href="#it9">^</a> Yarbrough, Robert W. (Jun 1983). "The Date of Papias: A Reassessment" (PDF). <i>Journal of the Evangelical Theological Society</i>. 26 (2): 181–191</li>
 				<li id="wc10"><a href="#it10">^</a> Bromiley, G.W. <i>International Standard Bible Encyclopedia, Volume III: K-P</i>. Eerdmans Publishing Company, 1979.</li>
 				<li id="wc11"><a href="#it11">^</a> Harrington, D.J. <i>The Gospel of Matthew</i>. Liturgical Press, 1991.</li>
-				<li id="wc12"><a href="#it12">^</a> Wikipedia contributors. "Gospel of John." <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018. </li>
+				<li id="wc12"><a href="#it12">^</a> Wikipedia contributors. "<a href="https://en.wikipedia.org/wiki/Gospel_of_John" rel="external" target="_blank">Gospel of John.</a>" <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018. </li>
 				<li id="wc13"><a href="#it13">^</a> D. M. Smith, <i>John Among the Synoptics: The Relationship in Twentieth-Century Research</i> Fortress, 1992.</li>
 				<li id="wc14"><a href="#it14">^</a> Luke 2:2 states that Jesus was born during the governorship of Quirinius between 6–7 CE. Matthew 2:1 states that Jesus was born during Herod's kingship, which ended with Herod's death in 4 BCE. This argument was made by Hart.</li>
-				<li id="wc15"><a href="#it15">^</a> Wikipedia contributors. "Q source." <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018. </li>
+				<li id="wc15"><a href="#it15">^</a> Wikipedia contributors. "<a href="https://en.wikipedia.org/wiki/Q_source" rel="external" target="_blank">Q source.</a>" <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 10 Apr. 2018. Web. 15 Apr. 2018. </li>
 				<li id="wc16"><a href="#it16">^</a> Edwards, James R. <i>The Hebrew Gospel and the Development of the Synoptic Tradition</i>. Wm. B. Eerdmans Publishing, 2009.</li>
 				<li id="wc17"><a href="#it17">^</a> Burkett, Delbert Royce. <i>Rethinking the Gospel Sources: The Unity or Plurality of Q</i>. Vol. 2. Society of Biblical Lit, 2009.</li>
 				<li id="wc18"><a href="#it18">^</a> "<a href="https://web.archive.org/web/19990219224131/http://www.augustana.ab.ca/~bjors/q-english.htm" rel="external" target="_blank">The Critical Text of Q.</a>" The International Q Project, 1996.</li>
 				<li id="wc19"><a href="#it19">^</a> MacDonald, Dennis R. <i>Two Shipwrecked Gospels: the Logoi of Jesus and Papias's Exposition of Logia about the Lord</i>. Vol. 8. Society of Biblical Lit, 2012.</li>
-				<li id="wc20"><a href="#it20">^</a> Wikipedia contributors. "Q+/Papias hypothesis." <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018. </li>
+				<li id="wc20"><a href="#it20">^</a> Wikipedia contributors. "<a href="https://en.wikipedia.org/wiki/Q%2B/Papias_hypothesis" rel="external" target="_blank">Q+/Papias hypothesis</a>." <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 25 Mar. 2018. Web. 15 Apr. 2018. </li>
 				<li id="wc21"><a href="#it21">^</a> Dunn, James DG. <i>Jesus Remembered: Christianity in the Making</i>. Vol. 1. Wm. B. Eerdmans Publishing, 2003.</li>
 				<li id="wc22"><a href="#it22">^</a> Burkett, pg. 157</li>
 				<li id="wc23"><a href="#it23">^</a> Burkett, pg. 157</li>
@@ -202,7 +202,7 @@
 				<li id="wc31"><a href="#it31">^</a> Aune, D. E. <i>The Blackwell Companion to The New Testament</i>. Wiley, 2010.</li>
 				<li id="wc32"><a href="#it32">^</a> Charlesworth, P. J. H. <i>The Historical Jesus: An Essential Guide</i>. Abingdon Press, 2008.</li>
 				<li id="wc33"><a href="#it33">^</a> Luke 21:20</li>
-				<li id="wc34"><a href="#it34">^</a> Wikipedia contributors. "Rylands Library Papyrus P52." <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018. </li>
+				<li id="wc34"><a href="#it34">^</a> Wikipedia contributors. "<a href="https://en.wikipedia.org/wiki/Rylands_Library_Papyrus_P52" rel="external" target="_blank">Rylands Library Papyrus P52.</a>" <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 22 Mar. 2018. Web. 15 Apr. 2018. </li>
 				<li id="wc35"><a href="#it35">^</a> Orsini, Pasquale, and Willy Clarysse. "Early New Testament Manuscripts and Their Dates." <i>Ephemerides Theologicae Lovanienses</i> 88.4 (2012): 443-474.</li>
 				<li id="wc36"><a href="#it36">^</a> Nongbri, Brent. "The Use and Abuse of P52: Papyrological Pitfalls in the Dating of the Fourth Gospel." <i>Harvard Theological Review</i> 98.1 (2005): 23-48.</li>
 				<li id="wc37"><a href="#it37">^</a> Klink, Edward W. "Expulsion from the Synagogue." <i>Rethinking a Johannine</i> (2008).</li>
@@ -215,7 +215,7 @@
 				<li id="wc44"><a href="#it44">^</a> Trebilco, P. <i>The Early Christians in Ephesus from Paul to Ignatius</i>. Eerdmans Publishing Company, 2007.</li>
 				<li id="wc45"><a href="#it45">^</a> Green, J. B., et al. <i>Dictionary of Jesus and the Gospels</i>. InterVarsity Press, 2013.</li>
 				<li id="wc46"><a href="#it46">^</a> Burkett, D. <i>An Introduction to the New Testament and the Origins of Christianity</i>. Cambridge University Press, 2002.</li>
-				<li id="wc47"><a href="#it47">^</a> Wikipedia contributors. "John the Apostle." <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018.</li>
+				<li id="wc47"><a href="#it47">^</a> Wikipedia contributors. "<a href="https://en.wikipedia.org/wiki/John_the_Apostle" rel="external" target="_blank">John the Apostle.</a>" <i>Wikipedia, The Free Encyclopedia</i>. Wikipedia, The Free Encyclopedia, 15 Apr. 2018. Web. 15 Apr. 2018.</li>
 				<li id="wc48"><a href="#it48">^</a> "<a href="https://www.newworldencyclopedia.org/p/index.php?title=John_the_Apostle&oldid=1011768" rel="external" target="_blank">John the Apostle.</a>" New World Encyclopedia. 15 Apr. 2018. </li>
 				<li id="wc49"><a href="#it49">^</a> "<a href="http://www.catholic.org/saints/saint.php?saint_id=228" rel="external" target="_blank">St. John the Apostle.</a>" <i>Catholic Online</i>.</li>
 				<li id="wc50"><a href="#it50">^</a> Culpepper, R. A., et al. <i>Johannine Literature: With an Introduction by R.A. Culpepper</i>. Bloomsbury Academic, 2000.</li>
